# xunit

./: .cruft.json  .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/: CONTRIBUTING.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-question.yml  03-feature-request.yml  config.yml
.github/workflows/: cron.yml  main.yml
docs/: index.md
src/xunit/: __init__.py  test_case.py  test_result.py  test_suite.py  was_run.py
tests/system/: test_case_test.py  test_import.py
tests/unit/: test_was_run.py
